--- a/TestsGenerator/TestsGenerator/TestsGenerator.csproj
+++ b/TestsGenerator/TestsGenerator/TestsGenerator.csproj
@@ -36,6 +36,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileReader.cs" />
+    <Compile Include="FileWriter.cs" />
     <Compile Include="Generator.cs" />
   </ItemGroup>
   <ItemGroup>
