--- a/TestsGenerator/TestsGenerator/TestsGenerator.csproj
+++ b/TestsGenerator/TestsGenerator/TestsGenerator.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EED54439-4590-4886-A1AF-B1A0DADC6598}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>TestsGenerator</RootNamespace>
     <AssemblyName>TestsGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
@@ -38,6 +41,7 @@
   <ItemGroup>
     <Compile Include="FileReader.cs" />
     <Compile Include="FileWriter.cs" />
+    <Compile Include="GeneratedTest.cs" />
     <Compile Include="Generator.cs" />
   </ItemGroup>
   <ItemGroup>
